# cpp-cps-transpiler

./: CMakeLists.txt  README.md  cps.cc  run_tests.py
src/: code_emitter.h  cps_generator.cc  cps_generator.h  main.cc  recursion_detector.cc
tests/: example_output_fact  example_output_fact.cc  example_output_fib  example_output_fib.cc  example_output_tailrec  example_output_tailrec.cc  test_input_fact.cc  test_input_fib.cc  test_input_funcwrap.cc  test_input_tailrec.cc  test_input_tailrec_if.cc  test_input_unary.cc
